Remove overzealous case-protection, add missing publishers
Thanks to Zotero and Better Bib for Zotero

--- a/biblatex.bib
+++ b/biblatex.bib
@@ -61,7 +61,7 @@
   title      = {A Categorical Semantics of Quantum Protocols},
   author     = {Abramsky, Samson and Coecke, Bob},
   date       = {2004-07},
-  booktitle  = {Proceedings of the 19th {{Annual IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  booktitle  = {Proceedings of the 19th Annual IEEE Symposium on Logic in Computer Science},
   publisher  = ieee,
   series     = {{{LICS}} '04},
   pages      = {415--425},
@@ -96,7 +96,7 @@
   title      = {A Functional Quantum Programming Language},
   author     = {Altenkirch, Thorsten and Grattage, Jonathan},
   date       = {2005-06},
-  booktitle  = {Proceedings of the 20th Annual {{IEEE}} Symposium on Logic in Computer Science},
+  booktitle  = {Proceedings of the 20th Annual IEEE Symposium on Logic in Computer Science},
   publisher  = ieee,
   location   = {Chicago, USA},
   series     = {{{LICS}} '05},
@@ -114,7 +114,7 @@
   title     = {The {{Quantum IO Monad}}},
   author    = {Altenkirch, Thorsten and Green, Alexander S.},
   date      = {2009-11},
-  booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
+  booktitle = {Semantic Techniques in Quantum Computation},
   editor    = {Gay, Simon J. and Mackie, Ian},
   publisher = cup,
   location  = {Cambridge},
@@ -160,7 +160,7 @@
   title      = {Sized {{Types}} for {{Low}}-{{Level Quantum Metaprogramming}}},
   author     = {Amy, Matthew},
   date       = {2019-05},
-  booktitle  = {Reversible {{Computation}} ({{RC}} '19)},
+  booktitle  = {Reversible Computation (RC '19)},
   editor     = {Thomsen, Michael Kirkedal and Soeken, Mathias},
   publisher  = sprintl,
   location   = {Cham},
@@ -227,7 +227,7 @@
   title     = {Quantum Alternation: {{Prospects}} and Problems},
   author    = {B{\u a}descu, Costin and Panangaden, Prakash},
   date      = {2015-11},
-  booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic (QPL), Oxford, {{U}}.{{K}}., July 15--17, 2015},
+  booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic (QPL), Oxford, U.K., July 15--17, 2015},
   editor    = {Heunen, Chris and Selinger, Peter and Vicary, Jamie},
   publisher = opa,
   location  = {Waterloo, NSW, Australia},
@@ -276,7 +276,7 @@
   shorttitle = {Silq},
   author     = {Bichsel, Benjamin and Baader, Maximilian and Gehr, Timon and Vechev, Martin},
   date       = {2020-06},
-  booktitle  = {Proceedings of the 41st {{ACM SIGPLAN Conference}} on {{Programming Language Design}} and {{Implementation}}},
+  booktitle  = {Proceedings of the 41st ACM SIGPLAN Conference on Programming Language Design and Implementation},
   publisher  = acm,
   location   = {New York, NY, USA},
   series     = {{{PLDI}} '20},
@@ -292,7 +292,7 @@
   title     = {Formalization of Quantum Protocols using Coq},
   author    = {Boender, Jaap and Kamm{\"u}ller, Florian and Nagarajan, Rajagopal},
   date      = {2015-11},
-  booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic (QPL), Oxford, {{U}}.{{K}}., July 15--17, 2015},
+  booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic (QPL), Oxford, U.K., July 15--17, 2015},
   editor    = {Heunen, Chris and Selinger, Peter and Vicary, Jamie},
   publisher = opa,
   location  = {Waterloo, NSW, Australia},
@@ -370,7 +370,7 @@
   title      = {An Automated Deductive Verification Framework for Circuit-Building Quantum Programs},
   author     = {Chareton, Christophe and Bardin, S{\'e}bastien and Bobot, Fran{\c c}ois and Perrelle, Valentin and Valiron, Beno{\^i}t},
   date       = {2021-03},
-  booktitle  = {Programming Languages and Systems, {{ESOP}} 2021},
+  booktitle  = {Programming Languages and Systems, ESOP 2021},
   editor     = {Yoshida, Nobuko},
   publisher  = sprintl,
   location   = {Cham},
@@ -537,7 +537,7 @@
   title     = {Extended {{Measurement Calculus}}},
   author    = {Danos, Vincent and Kashefi, Elham and Panangaden, Prakash and Perdrix, Simon},
   date      = {2009-11},
-  booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
+  booktitle = {Semantic Techniques in Quantum Computation},
   editor    = {Gay, Simon J. and Mackie, Ian},
   publisher = cup,
   location  = {Cambridge},
@@ -607,7 +607,7 @@
   shorttitle = {Linear {{Dependent Type Theory}} for {{Quantum Programming Languages}}},
   author     = {Fu, Peng and Kishida, Kohei and Selinger, Peter},
   date       = {2020-07},
-  booktitle  = {Proceedings of the 35th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  booktitle  = {Proceedings of the 35th Annual ACM/IEEE Symposium on Logic in Computer Science},
   publisher  = acm,
   location   = {New York, NY, USA},
   series     = {{{LICS}} '20},
@@ -667,7 +667,7 @@
   title      = {Communicating Quantum Processes},
   author     = {Gay, Simon J. and Nagarajan, Rajagopal},
   date       = {2005-01},
-  booktitle  = {Proceedings of the 32nd {{ACM SIGPLAN}}-{{SIGACT}} Symposium on {{Principles}} of Programming Languages},
+  booktitle  = {Proceedings of the 32nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
   publisher  = acm,
   location   = {New York, NY, USA},
   series     = {{{POPL}} '05},
@@ -699,7 +699,7 @@
   title      = {QMC: A Model Checker for Quantum Systems},
   author     = {Gay, Simon J. and Nagarajan, Rajagopal and Papanikolaou, Nikolaos},
   date       = {2008-07},
-  booktitle  = {Computer Aided Verification ({{CAV}} '08)},
+  booktitle  = {Computer Aided Verification (CAV '08)},
   editor     = {Gupta, Aarti and Malik, Sharad},
   publisher  = {Springer},
   location   = {Berlin, Heidelberg},
@@ -746,6 +746,7 @@
   author     = {Grattage, Jonathan},
   date       = {2011-02},
   booktitle  = {Proceedings of the Joint 5th International Workshop on Quantum Physics and Logic and 4th Workshop on Developments in Computational Models (QPL/DCM 2008)},
+  publisher  = {Elsevier},
   series     = entcs,
   volume     = {270},
   pages      = {165--174},
@@ -774,7 +775,7 @@
   shorttitle = {Quipper},
   author     = {Green, Alexander S. and Lumsdaine, Peter LeFanu and Ross, Neil J. and Selinger, Peter and Valiron, Beno{\^i}t},
   date       = {2013-06},
-  booktitle  = {Proceedings of the 34th {{ACM SIGPLAN Conference}} on {{Programming Language Design}} and {{Implementation}}},
+  booktitle  = {Proceedings of the 34th ACM SIGPLAN Conference on Programming Language Design and Implementation},
   publisher  = acm,
   location   = {New York, NY, USA},
   series     = {{{PLDI}} '13},
@@ -791,7 +792,7 @@
   title      = {An {{Introduction}} to {{Quantum Programming}} in {{Quipper}}},
   author     = {Green, Alexander S. and Lumsdaine, Peter LeFanu and Ross, Neil J. and Selinger, Peter and Valiron, Beno{\^i}t},
   date       = {2013-07},
-  booktitle  = {Reversible {{Computation}} ({{RC}} '13)},
+  booktitle  = {Reversible Computation (RC '13)},
   editor     = {Dueck, Gerhard W. and Miller, D. Michael},
   publisher  = {Springer},
   location   = {Berlin, Heidelberg},
@@ -936,7 +937,7 @@
   title     = {Analysis of Quantum Entanglement in Quantum Programs using Stabilizer Formalism},
   author    = {Honda, Kentaro},
   date      = {2015-11},
-  booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic (QPL), Oxford, {{U}}.{{K}}., July 15--17, 2015},
+  booktitle = {Proceedings of the 12th International Workshop on Quantum Physics and Logic (QPL), Oxford, U.K., July 15--17, 2015},
   editor    = {Heunen, Chris and Selinger, Peter and Vicary, Jamie},
   publisher = opa,
   location  = {Waterloo, NSW, Australia},
@@ -987,7 +988,7 @@
   title      = {Quantum channels as a categorical completion},
   author     = {Huot, Mathieu and Staton, Sam},
   date       = {2019-06},
-  booktitle  = {Proceedings of the 34th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  booktitle  = {Proceedings of the 34th Annual ACM/IEEE Symposium on Logic in Computer Science},
   publisher  = ieee,
   location   = {Los Alamitos, CA, USA},
   series     = {{{LICS}} '19},
@@ -1067,7 +1068,7 @@
   title     = {Abstract Interpretation Techniques for Quantum Computation},
   author    = {Jorrand, Philippe and Perdrix, Simon},
   date      = {2009-11},
-  booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
+  booktitle = {Semantic Techniques in Quantum Computation},
   editor    = {Gay, Simon J. and Mackie, Ian},
   publisher = cup,
   location  = {Cambridge},
@@ -1234,7 +1235,7 @@
   shorttitle = {Enriching a {{Linear}}/{{Non}}-Linear {{Lambda Calculus}}},
   author     = {Lindenhovius, Bert and Mislove, Michael and Zamdzhiev, Vladimir},
   date       = {2018-07},
-  booktitle  = {Proceedings of the 33rd {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  booktitle  = {Proceedings of the 33rd Annual ACM/IEEE Symposium on Logic in Computer Science},
   publisher  = acm,
   location   = {New York, NY, USA},
   series     = {{{LICS}} '18},
@@ -1251,7 +1252,7 @@
   title     = {Formal {{Verification}} of {{Quantum Algorithms Using Quantum Hoare Logic}}},
   author    = {Liu, Junyi and Zhan, Bohua and Wang, Shuling and Ying, Shenggang and Liu, Tao and Li, Yangjia and Ying, Mingsheng and Zhan, Naijun},
   date      = {2019-07},
-  booktitle = {Computer {{Aided Verification}} ({{CAV}} '19)},
+  booktitle = {Computer Aided Verification (CAV '19)},
   editor    = {Dillig, Isil and Tasiran, Serdar},
   publisher = sprintl,
   location  = {Cham},
@@ -1372,7 +1373,7 @@
   shorttitle = {qPCF},
   author     = {Paolini, Luca and Zorzi, Margherita},
   date       = {2017-04},
-  booktitle  = {Theory and {{Applications}} of {{Models}} of {{Computation}} ({{TAMC}} '17)},
+  booktitle  = {Theory and Applications of Models of Computation (TAMC '17)},
   publisher  = sprintl,
   location   = {Cham},
   series     = lncs,
@@ -1388,7 +1389,7 @@
   title     = {Quantum {{Programming Made Easy}}},
   author    = {Paolini, Luca and Roversi, Luca and Zorzi, Margherita},
   date      = {2019-04},
-  booktitle = {Proceedings Joint International Workshop on Linearity \& Trends in Linear Logic and Applications (Linearity-TLLA '18), Oxford, {{UK}}, 7--8 July 2018},
+  booktitle = {Proceedings Joint International Workshop on Linearity \& Trends in Linear Logic and Applications (Linearity-TLLA '18), Oxford, UK, 7--8 July 2018},
   editor    = {Ehrhard, Thomas and Fern{\'a}ndez, Maribel and de Paiva, Valeria and {Tortora de Falco}, Lorenzo},
   publisher = opa,
   series    = eptcs,
@@ -1434,7 +1435,7 @@
   title     = {{{QWIRE}}: A Core Language for Quantum Circuits},
   author    = {Paykin, Jennifer and Rand, Robert and Zdancewic, Steve},
   date      = {2017-01},
-  booktitle = {Proceedings of the 44th {{ACM SIGPLAN Symposium}} on {{Principles}} of {{Programming Languages}}},
+  booktitle = {Proceedings of the 44th ACM SIGPLAN Symposium on Principles of Programming Languages},
   publisher = acm,
   location  = {New York, NY, USA},
   series    = {{{POPL}} '17},
@@ -1667,7 +1668,7 @@
   title     = {Classical {{Control}} and {{Quantum Circuits}} in {{Enriched Category Theory}}},
   author    = {Rennela, Mathys and Staton, Sam},
   date      = {2018-04},
-  booktitle = {The {{Thirty}}-Third {{Conference}} on the {{Mathematical Foundations}} of {{Programming Semantics}} ({{MFPS XXXIII}})},
+  booktitle = {The Thirty-Third Conference on the Mathematical Foundations of Programming Semantics (MFPS XXXIII)},
   publisher = {Elsevier},
   series    = entcs,
   volume    = {336},
@@ -1779,7 +1780,7 @@
   title     = {A {{Brief Survey}} of {{Quantum Programming Languages}}},
   author    = {Selinger, Peter},
   date      = {2004-04},
-  booktitle = {Proceedings of the 7th {International Symposium} on {Functional} and {{Logic Programming}}},
+  booktitle = {Proceedings of the 7th International Symposium on Functional and Logic Programming},
   editor    = {Kameyama, Yukiyoshi and Stuckey, Peter J.},
   publisher = {Springer},
   location  = {Berlin, Heidelberg},
@@ -1841,7 +1842,7 @@
   title     = {Quantum {{Lambda Calculus}}},
   author    = {Selinger, Peter and Valiron, Beno{\^i}t},
   date      = {2009-11},
-  booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
+  booktitle = {Semantic Techniques in Quantum Computation},
   editor    = {Gay, Simon J. and Mackie, Ian},
   publisher = cup,
   location  = {Cambridge},
@@ -1888,6 +1889,7 @@
   url       = {https://ks.cs.uchicago.edu/publication/tttiq/},
   abstract  = {Q\# is a high-level programming language from Microsoft for writing and running quantum programs. Like most industrial languages, it was designed without a formal specification, which can naturally lead to ambiguity in its interpretation. Further, currently, the Q\# type system cannot statically prevent cloning of qubits. We aim to provide a formal specification and semantics for Q\#, placing the language on a solid mathematical foundation, enabling further evolution of its design and type system (including enforcing no-cloning). This paper describes our current progress in designing λ-Q\# (an idealized version of Q\#), our solution to the qubit cloning problem in λ-Q\#, and outlines the next steps.},
   keywords  = {quantum computing, quantum computation, programming languages, formal specification, formal language definitions, type systems, semantics and reasoning, quantum programming languages, language design, q\#},
+  webnote   = {See also: \cite{Singhal2022}},
   bibsource = qplbib
 }
 
@@ -1915,6 +1917,7 @@
   author     = {Singhal, Kartik and Hietala, Kesha and Marshall, Sarah and Rand, Robert},
   date       = {2022-06},
   booktitle  = {Proceedings of the 19th International Conference on Quantum Physics and Logic (QPL), Oxford, U.K., June 27--July 1, 2022},
+  publisher  = opa,
   eprinttype = {arXiv},
   eprint     = {2206.03532},
   url        = {https://ks.cs.uchicago.edu/publication/q-algol/},
@@ -2016,7 +2019,7 @@
   shorttitle = {Q\#},
   author     = {Svore, Krysta M. and Geller, Alan and Troyer, Matthias and Azariah, John and Granade, Christopher E. and Heim, Bettina and Kliuchnikov, Vadym and Mykhailova, Mariia and Paz, Andres and Roetteler, Martin},
   date       = {2018-02},
-  booktitle  = {Proceedings of the {{Real World Domain Specific Languages Workshop}} 2018},
+  booktitle  = {Proceedings of the Real World Domain Specific Languages Workshop 2018},
   publisher  = acm,
   location   = {New York, NY, USA},
   series     = {{{RWDSL}} '18},
@@ -2071,7 +2074,7 @@
   title      = {Quantum {{Hoare Logic}} with {{Ghost Variables}}},
   author     = {Unruh, Dominique},
   date       = {2019-06},
-  booktitle  = {Proceedings of the 34th {{Annual ACM}}/{{IEEE Symposium}} on {{Logic}} in {{Computer Science}}},
+  booktitle  = {Proceedings of the 34th Annual ACM/IEEE Symposium on Logic in Computer Science},
   publisher  = ieee,
   location   = {Los Alamitos, CA, USA},
   series     = {{{LICS}} '19},
@@ -2235,7 +2238,7 @@
   title     = {Predicate {{Transformer Semantics}} of {{Quantum Programs}}},
   author    = {Ying, Mingsheng and Duan, Runyao and Feng, Yuan and Ji, Zhengfeng},
   date      = {2009-11},
-  booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
+  booktitle = {Semantic Techniques in Quantum Computation},
   editor    = {Gay, Simon J. and Mackie, Ian},
   publisher = cup,
   location  = {Cambridge},
@@ -2437,7 +2440,7 @@
   title     = {An Applied Quantum {{Hoare}} Logic},
   author    = {Zhou, Li and Yu, Nengkun and Ying, Mingsheng},
   date      = {2019-06},
-  booktitle = {Proceedings of the 40th {{ACM SIGPLAN Conference}} on {{Programming Language Design}} and {{Implementation}}},
+  booktitle = {Proceedings of the 40th ACM SIGPLAN Conference on Programming Language Design and Implementation},
   publisher = acm,
   location  = {New York, NY, USA},
   series    = {{{PLDI}} '19},
