Fix IEEE location/address inconsistency

--- a/bbt.bib
+++ b/bbt.bib
@@ -60,6 +60,7 @@
   month         = jul,
   booktitle     = {Proceedings of the 19th Annual IEEE Symposium on Logic in Computer Science},
   publisher     = ieee,
+  address       = {Los Alamitos, CA, USA},
   series        = {{{LICS}} '04},
   pages         = {415--425},
   doi           = {10.1109/LICS.2004.1319636},
@@ -97,7 +98,7 @@
   month         = jun,
   booktitle     = {Proceedings of the 20th Annual IEEE Symposium on Logic in Computer Science},
   publisher     = ieee,
-  address       = {{Chicago, USA}},
+  address       = {Los Alamitos, CA, USA},
   series        = {{{LICS}} '05},
   pages         = {249--258},
   doi           = {10.1109/LICS.2005.1},
@@ -1061,7 +1062,7 @@
   month         = jun,
   booktitle     = {Proceedings of the 34th Annual ACM/IEEE Symposium on Logic in Computer Science},
   publisher     = ieee,
-  location      = {Los Alamitos, CA, USA},
+  address       = {Los Alamitos, CA, USA},
   series        = {{{LICS}} '19},
   eid           = {35},
   pages         = {35},
