--- a/biblatex.bib
+++ b/biblatex.bib
@@ -63,6 +63,7 @@
   date       = {2004-07},
   booktitle  = {Proceedings of the 19th Annual IEEE Symposium on Logic in Computer Science},
   publisher  = ieee,
+  location   = {Los Alamitos, CA, USA},
   series     = {{{LICS}} '04},
   pages      = {415--425},
   doi        = {10.1109/LICS.2004.1319636},
@@ -98,7 +99,7 @@
   date       = {2005-06},
   booktitle  = {Proceedings of the 20th Annual IEEE Symposium on Logic in Computer Science},
   publisher  = ieee,
-  location   = {Chicago, USA},
+  location   = {Los Alamitos, CA, USA},
   series     = {{{LICS}} '05},
   pages      = {249--258},
   doi        = {10.1109/LICS.2005.1},
