--- a/bbt.bib
+++ b/bbt.bib
@@ -1623,7 +1623,7 @@
   publisher     = acm,
   address       = {New York, NY, USA},
   series        = {{{PLDI}} '22},
-  pages         = {},
+  pages         = {657--670},
   numpages      = {14},
   doi           = {10.1145/3519939.3523713},
   archiveprefix = {arXiv},
@@ -2188,7 +2188,7 @@
   archiveprefix = {arXiv},
   eprint        = {1803.00652},
   abstract      = {Quantum computing exploits quantum phenomena such as superposition and entanglement to realize a form of parallelism that is not available to traditional computing. It offers the potential of significant computational speed-ups in quantum chemistry, materials science, cryptography, and machine learning. The dominant approach to programming quantum computers is to provide an existing high-level language with libraries that allow for the expression of quantum programs. This approach can permit computations that are meaningless in a quantum context; prohibits succinct expression of interaction between classical and quantum logic; and does not provide important constructs that are required for quantum programming. We present Q\#, a quantum-focused domain-specific language explicitly designed to correctly, clearly and completely express quantum algorithms. Q\# provides a type system; a tightly constrained environment to safely interleave classical and quantum computations; specialized syntax; symbolic code manipulation to automatically generate correct transformations of quantum operations; and powerful functional constructs which aid composition.},
-  keywords      = {domain specific language, functional programming, quantum computing},
+  keywords      = {domain specific language, functional programming, quantum computing, q\#},
   webnote       = {See also Ch. 8 of \cite{Heim2020}},
   bibsource     = qplbib
 }
@@ -2202,7 +2202,7 @@
   publisher     = acm,
   address       = {New York, NY, USA},
   series        = {{{PLDI}} '22},
-  pages         = {},
+  pages         = {641--656},
   numpages      = {16},
   doi           = {10.1145/3519939.3523431},
   archiveprefix = {arXiv},
@@ -2379,7 +2379,7 @@
   publisher     = acm,
   address       = {New York, NY, USA},
   series        = {{{PLDI}} '22},
-  pages         = {},
+  pages         = {625--640},
   numpages      = {16},
   doi           = {10.1145/3519939.3523433},
   archiveprefix = {arXiv},
