--- a/biblatex.bib
+++ b/biblatex.bib
@@ -1487,7 +1487,7 @@
   publisher  = acm,
   location   = {New York, NY, USA},
   series     = {{{PLDI}} '22},
-  pages      = {},
+  pages      = {657--670},
   doi        = {10.1145/3519939.3523713},
   eprinttype = {arXiv},
   eprint     = {2110.07018},
@@ -2008,7 +2008,7 @@
   eprinttype = {arXiv},
   eprint     = {1803.00652},
   abstract   = {Quantum computing exploits quantum phenomena such as superposition and entanglement to realize a form of parallelism that is not available to traditional computing. It offers the potential of significant computational speed-ups in quantum chemistry, materials science, cryptography, and machine learning. The dominant approach to programming quantum computers is to provide an existing high-level language with libraries that allow for the expression of quantum programs. This approach can permit computations that are meaningless in a quantum context; prohibits succinct expression of interaction between classical and quantum logic; and does not provide important constructs that are required for quantum programming. We present Q\#, a quantum-focused domain-specific language explicitly designed to correctly, clearly and completely express quantum algorithms. Q\# provides a type system; a tightly constrained environment to safely interleave classical and quantum computations; specialized syntax; symbolic code manipulation to automatically generate correct transformations of quantum operations; and powerful functional constructs which aid composition.},
-  keywords   = {domain specific language, functional programming, quantum computing},
+  keywords   = {domain specific language, functional programming, quantum computing, q\#},
   webnote    = {See also Ch. 8 of \cite{Heim2020}},
   bibsource  = qplbib
 }
@@ -2021,7 +2021,7 @@
   publisher  = acm,
   location   = {New York, NY, USA},
   series     = {{{PLDI}} '22},
-  pages      = {},
+  pages      = {641--656},
   doi        = {10.1145/3519939.3523431},
   eprinttype = {arXiv},
   eprint     = {2205.00661},
@@ -2181,7 +2181,7 @@
   publisher  = acm,
   location   = {New York, NY, USA},
   series     = {{{PLDI}} '22},
-  pages      = {},
+  pages      = {625--640},
   doi        = {10.1145/3519939.3523433},
   eprinttype = {arXiv},
   eprint     = {2204.09033},
