Fix Cross' name

--- a/bbt.bib
+++ b/bbt.bib
@@ -507,7 +507,7 @@
 
 @article{Cross2021,
   title         = {OpenQASM 3: A Broader and Deeper Quantum Assembly Language},
-  author        = {Cross, Andrew and Javadi-Abhari, Ali and Alexander, Thomas and de Beaudrap, Niel and Bishop, Lev S. and Heidel, Steven and Ryan, Colm A. and Sivarajah, Prasahnt and Smolin, John and Gambetta, Jay M. and Johnson, Blake R.},
+  author        = {Cross, Andrew W. and Javadi-Abhari, Ali and Alexander, Thomas and de Beaudrap, Niel and Bishop, Lev S. and Heidel, Steven and Ryan, Colm A. and Sivarajah, Prasahnt and Smolin, John and Gambetta, Jay M. and Johnson, Blake R.},
   year          = {2021},
   month         = dec,
   journal       = tqc,
