--- a/biblatex.bib
+++ b/biblatex.bib
@@ -1521,6 +1521,16 @@
   bibsource  = qplbib
 }
 
+@manual{QIRSpec2021,
+  title        = {QIR Specification},
+  organization = {QIR Alliance: \url{https://qir-alliance.org}},
+  date         = {2021-11},
+  version      = {0.1},
+  url          = {https://github.com/qir-alliance/qir-spec},
+  abstract     = {The QIR specification is an effort of the QIR Alliance. It defines how to represent quantum programs within the LLVM IR.},
+  bibsource    = qplbib
+}
+
 @misc{QiskitCommunity2017,
   title     = {Qiskit: {{An}} Open-Source Framework for Quantum Computing},
   author    = {{Qiskit Community}},
