--- a/bbt.bib
+++ b/bbt.bib
@@ -1669,6 +1669,17 @@
   bibsource     = qplbib
 }
 
+@manual{QIRSpec2021,
+  title     = {{QIR Specification}},
+  author    = {{QIR Alliance}},
+  year      = {2021},
+  month     = nov,
+  url       = {https://github.com/qir-alliance/qir-spec},
+  abstract  = {The QIR specification is an effort of the QIR Alliance. It defines how to represent quantum programs within the LLVM IR.},
+  note      = {Also see \url{https://qir-alliance.org}},
+  bibsource = qplbib
+}
+
 @misc{QiskitCommunity2017,
   title     = {Qiskit: {{An}} Open-Source Framework for Quantum Computing},
   author    = {{Qiskit Community}},
