--- a/biblatex.bib
+++ b/biblatex.bib
@@ -1139,6 +1139,18 @@
   bibsource    = qplbib
 }
 
+@article{LaRose2022,
+  title        = {Mitiq: {A} software package for error mitigation on noisy quantum computers},
+  author       = {LaRose, Ryan and Mari, Andrea and Kaiser, Sarah and Karalekas, Peter J. and Alves, Andre A. and Czarnik, Piotr and El Mandouh, Mohamed and Gordon, Max H. and Hindy, Yousef and Robertson, Aaron and Thakre, Purva and Wahl, Misty and Samuel, Danny and Mistri, Rahul and Tremblay, Maxime and Gardner, Nick and Stemen, Nathaniel T. and Shammah, Nathan and Zeng, William J.},
+  date         = {2022-08},
+  journaltitle = {{Quantum}},
+  volume       = {6},
+  eid          = {774},
+  doi          = {10.22331/q-2022-08-11-774},
+  url          = {https://github.com/unitaryfund/mitiq},
+  abstract     = {We introduce Mitiq, a Python package for error mitigation on noisy quantum computers. Error mitigation techniques can reduce the impact of noise on near-term quantum computers with minimal overhead in quantum resources by relying on a mixture of quantum sampling and classical post-processing techniques. Mitiq is an extensible toolkit of different error mitigation methods, including zero-noise extrapolation, probabilistic error cancellation, and Clifford data regression. The library is designed to be compatible with generic backends and interfaces with different quantum software frameworks. We describe Mitiq using code snippets to demonstrate usage and discuss features and contribution guidelines. We present several examples demonstrating error mitigation on IBM and Rigetti superconducting quantum processors as well as on noisy simulators.}
+}
+
 @article{Le2022,
   author       = {Le, Xuan-Bach and Lin, Shang-Wei and Sun, Jun and Sanan, David},
   title        = {A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic},
