--- a/biblatex.bib
+++ b/biblatex.bib
@@ -1887,7 +1887,7 @@
   title     = {Verified translation between low-level quantum languages},
   author    = {Singhal, Kartik and Rand, Robert and Hicks, Michael},
   date      = {2020-01},
-  booktitle = {Informal Proceedings of the First International Workshop on Programming Languages for Quantum Computing (PLanQC '20)},
+  booktitle = {First International Workshop on Programming Languages for Quantum Computing (PLanQC '20)},
   url       = {https://ks.cs.uchicago.edu/publication/verified-translation/},
   abstract  = {We describe the ongoing development of a verified translator between OpenQASM (Open Quantum Assembly Language) and sqir, a Small Quantum Intermediate Representation used for circuit optimization. Verified translation from and to OpenQASM will allow verified optimization of circuits written in a variety of tools and executed on real quantum computers. This translator is a step toward a verified compilation stack for quantum computing.},
   keywords  = {formal verification, nisq, program proof, programming languages, semantic preservation, openqasm, qasm, quantum computing},
@@ -1914,7 +1914,7 @@
   title     = {Toward a Type-Theoretic Interpretation of Q\# and Statically Enforcing the No-Cloning Theorem},
   author    = {Singhal, Kartik and Marshall, Sarah and Hietala, Kesha and Rand, Robert},
   date      = {2021-06},
-  booktitle = {Informal Proceedings of the Second International Workshop on Programming Languages for Quantum Computing (PLanQC '21)},
+  booktitle = {Second International Workshop on Programming Languages for Quantum Computing (PLanQC '21)},
   url       = {https://ks.cs.uchicago.edu/publication/tttiq/},
   abstract  = {Q\# is a high-level programming language from Microsoft for writing and running quantum programs. Like most industrial languages, it was designed without a formal specification, which can naturally lead to ambiguity in its interpretation. Further, currently, the Q\# type system cannot statically prevent cloning of qubits. We aim to provide a formal specification and semantics for Q\#, placing the language on a solid mathematical foundation, enabling further evolution of its design and type system (including enforcing no-cloning). This paper describes our current progress in designing λ-Q\# (an idealized version of Q\#), our solution to the qubit cloning problem in λ-Q\#, and outlines the next steps.},
   keywords  = {quantum computing, quantum computation, programming languages, formal specification, formal language definitions, type systems, semantics and reasoning, quantum programming languages, language design, q\#},
