--- a/bbt.bib
+++ b/bbt.bib
@@ -329,15 +329,15 @@
   volume    = {2020},
   url       = {https://isa-afp.org/entries/Isabelle_Marries_Dirac.html},
   abstract  = {This work is an effort to formalise some quantum algorithms and results in quantum information theory. Formal methods being critical for the safety and security of algorithms and protocols, we foresee their widespread use for quantum computing in the future. We have developed a large library for quantum computing in Isabelle based on a matrix representation for quantum circuits, successfully formalising the no-cloning theorem, quantum teleportation, Deutsch's algorithm, the Deutsch-Jozsa algorithm and the quantum Prisoner's Dilemma.},
-  webnote   = {Formal proof development in Isabelle. Supplement to \cite{Bordg2021}},
+  webnote   = {Formal proof development in Isabelle. Supplement to \cite{Bordg2020a}},
   bibsource = qplbib
 }
 
-@article{Bordg2021,
+@article{Bordg2020a,
   title     = {Certified Quantum Computation in Isabelle/HOL},
   author    = {Bordg, Anthony and Lachnitt, Hanna and He, Yijun},
   year      = {2021},
-  month     = jun,
+  month     = dec,
   journal   = jar,
   volume    = {65},
   number    = {5},
@@ -1421,7 +1421,7 @@
   title         = {Formalization of {{Metatheory}} of the {{Quipper Quantum Programming Language}} in a {{Linear Logic}}},
   author        = {Mahmoud, Mohamed Yousri and Felty, Amy P.},
   year          = {2019},
-  month         = dec,
+  month         = jun,
   journal       = jar,
   volume        = {63},
   number        = {4},
@@ -1554,7 +1554,7 @@
   shorttitle    = {{{QPCF}}},
   author        = {Paolini, Luca and Piccolo, Mauro and Zorzi, Margherita},
   year          = {2019},
-  month         = dec,
+  month         = mar,
   journal       = jar,
   volume        = {63},
   number        = {4},
