--- a/bbt.bib
+++ b/bbt.bib
@@ -1494,7 +1494,7 @@
 
 @article{Meuli2020,
   title     = {Enabling Accuracy-Aware Quantum Compilers Using Symbolic Resource Estimation},
-  author    = {Meuli, Giulia and Soeken, Mathias and Roetteler, Martin and H\"{a}ner, Thomas},
+  author    = {Meuli, Giulia and Soeken, Mathias and Roetteler, Martin and H{\"a}ner, Thomas},
   year      = {2020},
   month     = nov,
   journal   = pacmpl,
