--- a/biblatex.bib
+++ b/biblatex.bib
@@ -1354,7 +1354,7 @@
 
 @article{Meuli2020,
   title        = {Enabling Accuracy-Aware Quantum Compilers Using Symbolic Resource Estimation},
-  author       = {Meuli, Giulia and Soeken, Mathias and Roetteler, Martin and H\"{a}ner, Thomas},
+  author       = {Meuli, Giulia and Soeken, Mathias and Roetteler, Martin and H{\"a}ner, Thomas},
   date         = {2020-11},
   journaltitle = pacmpl,
   volume       = {4},
